--- a/thanks.html
+++ b/thanks.html
@@ -387,7 +387,7 @@
 						</p>
 						<input class="social_proof_optin" type="checkbox" name="user_optin_donate_social_proof">
 						<label class="social_proof_optin" for="user_optin_donate_social_proof">
-							YES, SHARE MY DONATION
+							YES, SHARE MY SUPPORT
 						</label>
 						<button type="submit" class="display-none submit-optin"></button>
 					</form>
