--- a/thanks.html
+++ b/thanks.html
@@ -379,7 +379,7 @@
 				  </div>
 	
 				{% endif %}
-				{% if not user.custom_fields.optin_donate_social_proof and page.custom_fields.show_social_proof_opt == "Y" %}
+				{% if not user.custom_fields.optin_donate_social_proof and page.custom_fields.show_social_proof_opt == "Y" and akid %}
 					<form class="text-center" name="update_optin" method="POST" action="/update_action/">
 						<input type="hidden" name="page" value="{{ page.name }}">
 						<p>
