chore: comment out Twitter share section in thanks.html

--- a/thanks.html
+++ b/thanks.html
@@ -424,7 +424,7 @@
 								<a class="fb-share button-share-facebook button-share-medium bg-facebook-icon bg-facebook-color margin-bottom-none" href="/share/link?type=fb&amp;page_name={{page.name}}&amp;action_id={{action.id}}&amp;akid={{akid}}&short=1">{% filter ak_text:"general_share_on_fb" %}Share on Facebook{% endfilter %}</a>
 							</div>
 						</div>
-						<div class="twitter-share">
+						<!-- <div class="twitter-share">
 							<div class="bg-twitter-color box margin-bottom-none">
 							<h4 class="icon-after icon-faded" data-icon="&#xE941;">{% filter ak_text:"general_tweet" %}Share on Twitter{% endfilter %}</h4>
 							</div>
@@ -436,7 +436,7 @@
 								{% endif %}
 								<p><a class="tw-share button-share-medium button-share-twitter bg-twitter-icon bg-twitter-color no-margin-bottom" href="/share/link?type=tw&amp;page_name={{page.name}}&amp;action_id={{action.id}}&amp;akid={{akid}}&short=1">{% filter ak_text:"general_tweet" %}Tweet{% endfilter %}</a></p>
 							</div>
-						</div>
+						</div> -->
 							</div>
 							<div class="share-general margin-bottom-medium c4 ct10 cm10">
 								<div class="box bg-midgray no-margin-bottom">
