--- a/afteraction-share.html
+++ b/afteraction-share.html
@@ -2,14 +2,14 @@
 Custom template for same-page post-AJAX submit share ask.
 {% endcomment %}
 
-<!-- Conversion Funnel Tracking -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-2JDP8BTBJM"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-V7QV8EHFVY"></script>
 <script>
-	window.dataLayer = window.dataLayer || [];
-	function gtag(){dataLayer.push(arguments);}
-	gtag('js', new Date());
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-	gtag('config', 'G-2JDP8BTBJM');
+  gtag('config', 'G-V7QV8EHFVY');
 </script>
 
 <!-- {{page}} -->
