Remove hardcoded style class from text field

--- a/signup.html
+++ b/signup.html
@@ -60,7 +60,7 @@
 {% else %}
 		<form id="action-form" class="c4 ct7_5 cm10 c-wide form-changeorg form-style-labelabove ak-form action_form text-black" name="act" method="POST" action="/act/" accept-charset="utf-8">
 	{% autoescape off %}
-			<div id="t" class="p text-large text-lineheight-small strong text-white">
+			<div id="t" class="p text-large text-lineheight-small strong">
 		{% if page.custom_fields.form_text_above_form %}
 				{{ page.custom_fields.form_text_above_form }}
 		{% else %}
