--- a/wrapper.html
+++ b/wrapper.html
@@ -182,9 +182,13 @@
 	TODO: Testing master push
 	-->
 
-
+<!-- 
 	<link rel='stylesheet' id='baseline-css' href='https://dbqvwi2zcv14h.cloudfront.net/ak/ak-v3.css'
+		type='text/css' media='screen' /> -->
+		
+	<link rel='stylesheet' id='baseline-css' href='https://xs17wgd2wu.ufs.sh/f/nX6SBdwGAudfQweIJH0By5HReBxivIJoZ8TcNY0Sn4PKXMmd'
 		type='text/css' media='screen' />
+
 	<link rel='stylesheet' href='https://dbqvwi2zcv14h.cloudfront.net/ak/custom.css' type='text/css' media='screen' />
 
 	{% if templateset.custom_fields.site_addl_css_url %}
