--- a/event_search.html
+++ b/event_search.html
@@ -181,7 +181,7 @@
 {% else %}
 <script type="text/javascript">
   RAH = {};
-  RAH.sprite_url = "https://350-ak-map-assets.netlify.com/images/marker-single.png";
+  RAH.sprite_url = "https://maps.gstatic.com/mapfiles/api-3/images/spotlight-poi2_hdpi.png";
   RAH.multiple_sprite_url = "https://350-ak-map-assets.netlify.com/images/marker-cluster.png";
   // Add locations for plotting on the map
   RAH.event_locations = [];
