--- a/wrapper.html
+++ b/wrapper.html
@@ -182,7 +182,9 @@
 	TODO: Testing master push
 	-->
 
-	<link rel='stylesheet' id='baseline-css' href='https://dbqvwi2zcv14h.cloudfront.net/ak/ak-v3.css'
+	<!-- <link rel='stylesheet' id='baseline-css' href='https://dbqvwi2zcv14h.cloudfront.net/ak/ak-v3.css'
+		type='text/css' media='screen' /> -->
+	<link rel='stylesheet' id='baseline-css' href='https://xs17wgd2wu.ufs.sh/f/nX6SBdwGAudfbOxl7kLN0c8PqkYTiFGe49ODU3yJtdnpVazl'
 		type='text/css' media='screen' />
 
 	<link rel='stylesheet' href='https://dbqvwi2zcv14h.cloudfront.net/ak/custom.css' type='text/css' media='screen' />
