--- a/wrapper.html
+++ b/wrapper.html
@@ -365,7 +365,7 @@
 </head>
 
 <body
-	class="ak-pagetype-{{ filename|split:'.'|nth:0 }} {{ page.type }} {{page.lang.iso_code|default:'en-US'}} page-layout-{% if page.custom_fields.page_layout_style %}{{ page.custom_fields.page_layout_style }}{% else %}condensed{% endif %} {% if page.lang.is_rtl %}ak-rtl{% endif %} no-js ak-no-js ">
+	class="ak-pagetype-{{ filename|split:'.'|nth:0 }} {{ page.type }} {{page.lang.iso_code|default:'en-US'}} page-layout-{% if page.custom_fields.page_layout_style %}{{ page.custom_fields.page_layout_style }}{% else %}condensed{% endif %} {% if page.lang.is_rtl %}ak-rtl{% endif %} no-js ak-no-js body-{{ page.custom_fields.page_background_color }}">
 
 	{% if page.custom_fields.page_disable_gtm != 'Y' %}
 	<!-- Google Tag Manager (noscript) -->
@@ -624,7 +624,7 @@
 		}
 	</script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.8.26/dayjs.min.js"></script>
-	<div id="body-mobile-background"></div>
+	<div id="body-mobile-background" class="bg-{{ page.custom_fields.page_background_color }}"></div>
 	{% block scripts %}
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.26.0/moment.min.js"></script>
 
@@ -633,7 +633,3 @@
 </body>
 
 </html><!-- one more test for cache awesomeness -->
-
-
-
-
