--- a/petition.html
+++ b/petition.html
@@ -1,7 +1,7 @@
 {% extends "./wrapper.html" %}
 {% load actionkit_tags %}
 {% block content %}
-<section id="action-lead" class="section action-lead title-section width-medium padding-medium bg-{% if page.custom_fields.page_background_color %}{{ page.custom_fields.page_background_color }}{% else %}white{% endif %}{% if page.custom_fields.page_background_image %}-fade{% endif %}">
+<section id="action-lead" class="section action-lead title-section width-medium padding-medium bg-{% if page.custom_fields.page_background_image %}{{ page.custom_fields.page_background_color | default: 'blue_opaque' }}-fade{% else %}blue_opaque-fade{% endif %}">
 	<div class="section-inner">
     
 		<div id="action-header" class="{% if page.custom_fields.page_layout_style == 'expanded' %}c10{% else %}c6{% endif %} ct10 cm10 c-wide">
