--- a/petition.html
+++ b/petition.html
@@ -1,9 +1,9 @@
 {% extends "./wrapper.html" %}
 {% load actionkit_tags %}
 {% block content %}
-<section id="action-lead" class="section action-lead title-section width-medium padding-medium bg-{% if page.custom_fields.page_background_image %}{{ page.custom_fields.page_background_color | default: 'blue_opaque' }}-fade{% else %}blue_opaque-fade{% endif %}">
-	<div class="section-inner">
-    
+<section id="action-lead"
+  class="section action-lead title-section width-medium padding-medium bg-{% if page.custom_fields.page_background_image and page.custom_fields.page_background_color %}{{ page.custom_fields.page_background_color }}-fade{% else %}blue_opaque-fade{% endif %}">
+		<div class="section-inner">
 		<div id="action-header" class="{% if page.custom_fields.page_layout_style == 'expanded' %}c10{% else %}c6{% endif %} ct10 cm10 c-wide">
 			<a id="jump-to-form" href="#action-form" class="tablet-hide desktop-hide mobile-hide bg-orange text-underline-none text-center arrow-down text-large2">{% if page.custom_fields.form_submit_button_text %}{{ page.custom_fields.form_submit_button_text }}{% else %}{% filter ak_text:"petition_submit_button" %}Sign{% endfilter %}{% endif %}</a>
 	{% if page.custom_fields.page_pretitle %}
